--- a/data/fonts.json5
+++ b/data/fonts.json5
@@ -1,4 +1,77 @@
 {
-    "chip48": [
+    chip48: [
+        0xF0, 0x90, 0x90, 0x90, 0xF0, // 0
+        0x20, 0x60, 0x20, 0x20, 0x70, // 1
+        0xF0, 0x10, 0xF0, 0x80, 0xF0, // 2
+        0xF0, 0x10, 0xF0, 0x10, 0xF0, // 3
+        0x90, 0x90, 0xF0, 0x10, 0x10, // 4
+        0xF0, 0x80, 0xF0, 0x10, 0xF0, // 5
+        0xF0, 0x80, 0xF0, 0x90, 0xF0, // 6
+        0xF0, 0x10, 0x20, 0x40, 0x40, // 7
+        0xF0, 0x90, 0xF0, 0x90, 0xF0, // 8
+        0xF0, 0x90, 0xF0, 0x10, 0xF0, // 9
+        0xF0, 0x90, 0xF0, 0x90, 0x90, // A
+        0xE0, 0x90, 0xE0, 0x90, 0xE0, // B
+        0xF0, 0x80, 0x80, 0x80, 0xF0, // C
+        0xE0, 0x90, 0x90, 0x90, 0xE0, // D
+        0xF0, 0x80, 0xF0, 0x80, 0xF0, // E
+        0xF0, 0x80, 0xF0, 0x80, 0x80  // F
+    ],
+
+    cosmacvip: [
+        0xF0, 0x90, 0x90, 0x90, 0xF0, // 0
+        0x60, 0x20, 0x20, 0x20, 0x70, // 1
+        0xF0, 0x10, 0xF0, 0x80, 0xF0, // 2
+        0xF0, 0x10, 0xF0, 0x10, 0xF0, // 3
+        0xA0, 0xA0, 0xF0, 0x20, 0x20, // 4
+        0xF0, 0x80, 0xF0, 0x10, 0xF0, // 5
+        0xF0, 0x80, 0xF0, 0x90, 0xF0, // 6
+        0xF0, 0x10, 0x10, 0x10, 0x10, // 7
+        0xF0, 0x90, 0xF0, 0x90, 0xF0, // 8
+        0xF0, 0x90, 0xF0, 0x10, 0xF0, // 9
+        0xF0, 0x90, 0xF0, 0x90, 0x90, // A
+        0xF0, 0x50, 0x70, 0x50, 0xF0, // B
+        0xF0, 0x80, 0x80, 0x80, 0xF0, // C
+        0xF0, 0x50, 0x50, 0x50, 0xF0, // D
+        0xF0, 0x80, 0xF0, 0x80, 0xF0, // E
+        0xF0, 0x80, 0xF0, 0x80, 0x80  // F
+    ],
+
+    dream6800: [
+        0xE0, 0xA0, 0xA0, 0xA0, 0xE0, // 0
+        0x40, 0x40, 0x40, 0x40, 0x40, // 1
+        0xE0, 0x20, 0xE0, 0x80, 0xE0, // 2
+        0xE0, 0x20, 0xE0, 0x20, 0xE0, // 3
+        0x80, 0xA0, 0xA0, 0xE0, 0x20, // 4
+        0xE0, 0x80, 0xE0, 0x20, 0xE0, // 5
+        0xE0, 0x80, 0xE0, 0xA0, 0xE0, // 6
+        0xE0, 0x20, 0x20, 0x20, 0x20, // 7
+        0xE0, 0xA0, 0xE0, 0xA0, 0xE0, // 8
+        0xE0, 0xA0, 0xE0, 0x20, 0xE0, // 9
+        0xE0, 0xA0, 0xE0, 0xA0, 0xA0, // A
+        0xC0, 0xA0, 0xE0, 0xA0, 0xC0, // B
+        0xE0, 0x80, 0x80, 0x80, 0xE0, // C
+        0xC0, 0xA0, 0xA0, 0xA0, 0xC0, // D
+        0xE0, 0x80, 0xE0, 0x80, 0xE0, // E
+        0xE0, 0x80, 0xC0, 0x80, 0x80  // F
+    ],
+
+    eti660: [
+        0xE0, 0xA0, 0xA0, 0xA0, 0xE0, // 0
+        0x20, 0x20, 0x20, 0x20, 0x20, // 1
+        0xE0, 0x20, 0xE0, 0x80, 0xE0, // 2
+        0xE0, 0x20, 0xE0, 0x20, 0xE0, // 3
+        0xA0, 0xA0, 0xE0, 0x20, 0x20, // 4
+        0xE0, 0x80, 0xE0, 0x20, 0xE0, // 5
+        0xE0, 0x80, 0xE0, 0xA0, 0xE0, // 6
+        0xE0, 0x20, 0x20, 0x20, 0x20, // 7
+        0xE0, 0xA0, 0xE0, 0xA0, 0xE0, // 8
+        0xE0, 0xA0, 0xE0, 0x20, 0xE0, // 9
+        0xE0, 0xA0, 0xE0, 0xA0, 0xA0, // A
+        0x80, 0x80, 0xE0, 0xA0, 0xE0, // B
+        0xE0, 0x80, 0x80, 0x80, 0xE0, // C
+        0x20, 0x20, 0xE0, 0xA0, 0xE0, // D
+        0xE0, 0x80, 0xE0, 0x80, 0xE0, // E
+        0xE0, 0x80, 0xE0, 0x80, 0x80  // F
     ]
 }
