--- a/data/settings.json5
+++ b/data/settings.json5
@@ -1,12 +1,20 @@
 {
-    "window": {
-        "width": 800,
-        "height": 400,
-        "fullscreen": false
+    window: {
+        width: 800,
+        height: 400,
+        fullscreen: false
     },
 
-    "display": {
-        "width": 64,
-        "height": 32
+    display: {
+        width: 64,
+        height: 32
+    },
+
+    memory: {
+        amount: 4096
+    },
+
+    font: {
+        name: 'chip48'
     }
 }
